Bug 626138 - Bug 616841 has broken non-libxul builds when trying to build xpcshell, with undefined symbol "xpc_LocalizeContext(JSContext*)". r=bz a=bustage